--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,11 @@
 <resources>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="space_small">8dp</dimen>
+    <dimen name="space_medium">16dp</dimen>
+    <dimen name="space_large">24dp</dimen>
+    <dimen name="space_xl">48dp</dimen>
+    <dimen name="space_xxl">72dp</dimen>
+    <dimen name="app_bar_height">360dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="profile_image_size">96dp</dimen>
 </resources>
