--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="profile_image_size">96dp</dimen>
+    <dimen name="mini_profile_image_size">48dp</dimen>
+    <dimen name="video_height">300dp</dimen>
+    <dimen name="border_radius_medium">24dp</dimen>
 </resources>
