--- a/app/src/main/res/layout/header_profile.xml
+++ b/app/src/main/res/layout/header_profile.xml
@@ -38,6 +38,7 @@
         android:text="Esta es mi biografía"/>
 
     <Button
+        android:id="@+id/btn_edit_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small"
