--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -16,19 +16,19 @@
         android:paddingEnd="@dimen/space_medium"
         tools:context=".presentation.view.activity.EditProfileActivity">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/img_profile"
             android:layout_width="@dimen/profile_image_size"
             android:layout_height="@dimen/profile_image_size"
             android:layout_marginTop="@dimen/space_medium"
             app:srcCompat="@drawable/ic_person"
-            android:scaleType="fitCenter"
+            app:imageUri="@{viewModel.profileImageUri}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/txt_change_photo"
+        <Button
+            android:id="@+id/btn_change_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
@@ -44,7 +44,7 @@
             android:layout_marginTop="@dimen/space_large"
             android:hint="@string/lbl_name"
             app:error="@{viewModel.showErrors ? viewModel.nameError : null}"
-            app:layout_constraintTop_toBottomOf="@id/txt_change_photo">
+            app:layout_constraintTop_toBottomOf="@id/btn_change_photo">
 
             <EditText
                 android:layout_width="match_parent"
