--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -31,7 +31,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/img_profile"
             tools:text="Username sang Secreto" />
 
-        <VideoView
+        <!--VideoView
             android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="@dimen/video_height"
@@ -39,7 +39,45 @@
             android:layout_marginTop="@dimen/space_small"
             app:layout_constraintTop_toBottomOf="@id/img_profile"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" /-->
+
+        <FrameLayout
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/video_height"
+            android:background="#000"
+            app:layout_constraintTop_toBottomOf="@id/img_profile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
+
+            <ImageView
+                android:id="@+id/volume_control"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end|bottom"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="15dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_volume_on"
+                android:tint="@android:color/white"
+                android:alpha="0"
+                android:animateLayoutChanges="true" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                style="?android:attr/progressBarStyle"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -81,14 +119,14 @@
             app:layout_constraintStart_toStartOf="@id/video"
             app:layout_constraintBottom_toBottomOf="@id/video" />
 
-        <TextView
+        <!--TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_medium"
             android:layout_marginBottom="@dimen/space_medium"
             android:text="@string/txt_zero_reproductions"
             app:layout_constraintEnd_toEndOf="@id/video"
-            app:layout_constraintBottom_toBottomOf="@id/video" />
+            app:layout_constraintBottom_toBottomOf="@id/video" /-->
 
         <ImageView
             android:id="@+id/img_like"
