--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -3,6 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="videoInfo"
+            type="com.example.karaokedemo.presentation.model.Video" />
+        <variable
+            name="userSang"
+            type="String" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,9 +24,10 @@
             android:id="@+id/img_profile"
             android:layout_width="@dimen/mini_profile_image_size"
             android:layout_height="@dimen/mini_profile_image_size"
-            app:srcCompat="@drawable/ic_person"
             android:layout_marginTop="@dimen/space_medium"
             android:layout_marginStart="@dimen/space_medium"
+            app:srcCompat="@drawable/ic_person"
+            app:imageUri="@{videoInfo.user.imageUri}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -29,6 +39,7 @@
             app:layout_constraintStart_toEndOf="@id/img_profile"
             app:layout_constraintTop_toTopOf="@+id/img_profile"
             app:layout_constraintBottom_toBottomOf="@+id/img_profile"
+            android:text="@{userSang}"
             tools:text="Username sang Secreto" />
 
         <!--VideoView
@@ -45,6 +56,7 @@
             android:id="@+id/video"
             android:layout_width="match_parent"
             android:layout_height="@dimen/video_height"
+            android:layout_marginTop="@dimen/space_medium"
             android:background="#000"
             app:layout_constraintTop_toBottomOf="@id/img_profile"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +66,8 @@
                 android:id="@+id/thumbnail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                imageUri="@{videoInfo.previewImageUrl}"/>
 
             <ImageView
                 android:id="@+id/volume_control"
@@ -115,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/space_medium"
             android:layout_marginBottom="@dimen/space_medium"
+            android:text="@{videoInfo.description}"
             tools:text="Secreto - Anuel AA, Karol G"
             app:layout_constraintStart_toStartOf="@id/video"
             app:layout_constraintBottom_toBottomOf="@id/video" />
