--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -18,12 +18,12 @@
 
         <ImageView
             android:id="@+id/img_profile"
-            android:layout_width="@dimen/profile_image_size"
-            android:layout_height="@dimen/profile_image_size"
+            android:layout_width="@dimen/icon_size_xl"
+            android:layout_height="@dimen/icon_size_xl"
             android:layout_marginTop="@dimen/space_medium"
-            app:srcCompat="@drawable/ic_person"
+            app:srcCompat="@drawable/ic_person_with_background"
             app:imageUri="@{viewModel.profileImageUri}"
-            app:placeholder="@{@drawable/ic_person}"
+            app:placeholder="@{@drawable/ic_person_with_background}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
