--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,15 +18,23 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_bar_height"
+            android:elevation="0dp"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:contentScrim="?attr/colorPrimaryDark"
+                app:title="@{viewModel.user.name}"
+                app:expandedTitleGravity="top|center_horizontal"
+                app:expandedTitleMarginTop="@dimen/app_bar_title_margin"
                 app:toolbarId="@+id/toolbar">
+
+                <include android:id="@+id/header_profile"
+                    app:user="@{viewModel.user}"
+                    layout="@layout/header_profile" />
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -35,11 +43,8 @@
                     app:layout_collapseMode="pin"
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-                <include android:id="@+id/header_profile"
-                    app:user="@{viewModel.user}"
-                    layout="@layout/header_profile" />
-
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <com.example.karaokedemo.presentation.view.component.VideoPlayerRecyclerView
