--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryLight">#B180F7</color>
+    <color name="colorPrimaryLight2">#D0b3FA</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorItemDarkBackground">#FF424242</color>
 </resources>
