--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="itemBackground">@color/colorItemDarkBackground</item>
+        <item name="boxBackgroundColor">@color/colorPrimaryLight</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,5 +17,15 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.WhiteButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/background_white</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="AppTheme.WhiteButton.Small">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
