--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorItemDarkBackground">#FF424242</color>
     <color name="windowBackground">#282828</color>
+    <color name="colorError">@android:color/holo_red_dark</color>
 </resources>
