--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,17 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <style name="AppTheme.DarkButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/background_item</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="AppTheme.WhiteButton.Small">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="AppTheme.DarkButton.Small">
         <item name="android:textSize">@dimen/text_small</item>
         <item name="android:textAllCaps">false</item>
     </style>
